--- a/sub-pages/human-web/AI.htm
+++ b/sub-pages/human-web/AI.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about Google's AI integration in their cloud platform">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Lectures - Google Gets Aggressive in A.I.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Lectures - Google Gets Aggressive in A.I.</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>In this assignment, Rio had us take notes on a video she gave us on youtube, that showed a presentation of how google was integrating AI in its google cloud platform. By doing this, they plan to democratize AI so that in the near future, all can make use of it. These are my notes.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">
+                        <ul>
+                        <li>Google is democratizing AI for all to use</li>
+                        <li>They will do this by using it in the google cloud</li>
+                        <li>AI is changing at a much rapid pace than anyone can think of</li>
+                        <li>It affects retail in a lot of ways including</li>
+                        <li>It can affect media and entertainment from like allowing google images to create tags that are related to the searches you made</li>
+                        <li>The finance world is also seeing the effects of AI with integration of machines in bank telling, smart bots taking over call centers, and even in identifying crimes associated with finance</li>
+                        <li>Health care is the most profound users of AI</li>
+                        <li>4 areas of democratization:</li>
+                        <br>
+                        <li><p class="lead">Computing</p></li>
+                        <li>Cloud ML Engine allows you to get the make modules and focus on the creativity of the solution</li>
+                        <li>Video intelligence api allows you to search through lots of video data to find specific scenes that are related to what you searched for</li>
+                        <br>
+                        <li><p class="lead">Democratizing data</p></li>
+                        <li>Data is needed to train and develop machine learning.</li>
+                        <li>Google is acquiring kaggle, which is a community of developers that create modules. With this, google will give them the data they need to keep on developing modules.</li>
+                        <br>
+                        <li><p class="lead">Democratizing talent</p></li>
+                        <li>Google is committed to funding research about AI and educating others about it. It also partners with companies to train them with new skills of AI development</li>
+                        </ul>
+                    </p>
+                    <img class="img-rounded" src="../../img/images/AIgoogle.png">                    
                 </div>
             </div>
         </div>
