--- a/sub-pages/human-web/netmap.htm
+++ b/sub-pages/human-web/netmap.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about what a network map is and how it connects things to each other and the internet">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Hands-On - Map Your Network</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Hands-On - Map Your Network</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>This allowed me to see my home network and see how things connected with each other and the internet. The picture I included is not the one I submitted in Canvas just for privacy purposes.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I had done this assignment before since I was in CIT-15 last semester. However, my dummy self deleted it, thinking it wouldn't be of use anymore. So i had to do it all over again which was somewhat complicated. The way my stepdad has all the internet tech organized, it is difficult to access them. I did manage to do it though. It was also good practicing this concept again, as it served as a refresher to me. I realize that my internet isn't really that fast, but it doesn't really feel slow when I use the internet on my computer or phone, it is actually pretty fast. I can't imagine how much faster it would work if we got a better plan with faster speeds and a faster router. Maybe in the future i will invest in a faster router since it is the cheaper option of the two. </p>
+                    <img class="img-rounded" src="../../img/images/net-map.jpg">
                 </div>
             </div>
         </div>
