--- a/sub-pages/human-web/themachine.htm
+++ b/sub-pages/human-web/themachine.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about how humans use the web and because of that, we cause it to grow when we post and upload things into it.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - Web 2.0 ... The Machine is Us/ing US</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - Web 2.0 ... The Machine is Us/ing US</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>I really loved the video that this assignment is based on. I enjoy it because of the way it is designed to show the evolution of the web and that it's directly related to the fact that because we use it, we are the ones that cause it to change. That connection is vital to understand not just to web developers but to the whole world.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I like this video because it is really explanatory. I also like they way they made it. It's really interesting the way they set up the video and how they give us the information. They tell us that digital text is much more flexible than regular written text. It's hypertext, meaning that it can do so much more than normal text, like link to other sites, etc. I also like the point that we are the web. We post things, upload data, surf, stream, etc. I wanted to know what Digital Ethnography meant. While traditional ethnography is the scientific study of different cultures, digital ethnography is the study of culture online, and how humans interact with one another on the internet. Another term I somewhat didn't know is XML. I knew that it was like HTML but a bit different. It actually means Extensible Markup Language. Its a language that is human readable as well as machine readable.</p>
+                    <img class="img-rounded" src="../../img/images/google.png">
                 </div>
             </div>
         </div>
