--- a/sub-pages/protocols/ftp.htm
+++ b/sub-pages/protocols/ftp.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about the protocol ftp.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - Learn MORE about FTP!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - Learn MORE about FTP!</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>We just looked for information about what ftp was and how it was used. We also needed to find software and do research on it, as well as look for issues about it. </p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">FTP or file transfer protocol is the internet protocol that controls the file transfer between clients and servers. Its part of the TCP/IP suite of protocols used to govern the internet. I looked up software that dealt with FTP. I found a free open source software called FireZilla. It claims that it's easy to use and has a lot of different features with it. It's also available for all of the major OS platforms and even has a version for server side. There is also a pro version of FireZilla, but of course it comes with a price tag. One issue that i found with FTP is that it can mess up with the firewalls on server and client sides. It was built to communicate with little interference as possible. It may have been updated so I don't know if this still holds true though.</p>
+                    <img class="img-rounded" src="../../img/images/ftp-protocol.gif">
                 </div>
             </div>
         </div>
