--- a/sub-pages/human-web/darkweb.htm
+++ b/sub-pages/human-web/darkweb.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about the dark net, what it is, what it's purpose is, and who usually uses it.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - Dark Web</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - Dark Web</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>This assignment was pretty interesting as a topic to discuss. I was first confused why Rio had picked this topic, but I then saw that from a technonological view, it's very cool and super high tech.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">After watching this video, I am very concerned yet intrigued. I had heard about the dark net before, and how it was a haven for illegal activities and purchases. I also knew that everything done there was kept very discreet by the users and vendors. I just would never have thought that all this technology that helps keep everything so secretive might actually get mainstreamed. However now that i think about it, its really neat idea. Its true that we all are worried about our information being on the internet. Now, it's really hard not to keep it offline, since everything is moving toward connectivity on the internet. So implementing these tools to keep things encrypted and untraceable for our benefit is pretty cool. Yet, it also presents its dangers. These tools going mainstream means that more people will be able to do illegal activity online. So I guess you could say that it has it's pros and cons. This was a very interesting video that really made me look at the dark web a little differently, as far as the technology implemented in it goes.</p>
+                    <img class="img-rounded" src="../../img/images/darkweb.png">
                 </div>
             </div>
         </div>
