--- a/sub-pages/protocols/https.htm
+++ b/sub-pages/protocols/https.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about https, what it does, and how it's used.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - HTTPS</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - HTTPS</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>Rio had us watch a talk about https from googles I/O conference in 2017. From that, we had to research anything that stood out to us or that we weren't clear on. Then write a response on what we thought about the talk.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I really enjoyed this talk because it was very insightful on what HTTPS does and how to use it in a reasonable way. Also, the speaker made it very easy to understand, because rather than use very big and elaborate words and terms, she used simple ideas and illustrations that all could understand. I really do appreciate that they are emphasizing this protocol because we live in a world where we leave data about ourselves everywhere. Someone doesn't have to look too far to get information about us, since they have tools that will search through a lot of data in literally the blink of an eye. It's really important to protect that data from those who wish to do things with it that can hurt us in a lot of ways. I had to research the term TLS since I had trouble understanding what it was. It stands for Transport Layer Security, and is the standardized encryption protocol between clients and servers. It is the protocol responsible for the "handshake" between the two. On writing this, I don't have the time to watch the whole thing, but I do want to finish this video later because it really is interesting to me.</p>
+                    <img class="img-rounded" src="../../img/images/https-image.jpg">
                 </div>
             </div>
         </div>
