--- a/sub-pages/protocols/semantic-versioning.htm
+++ b/sub-pages/protocols/semantic-versioning.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about what semantic versioning is, and why it has become the new standard.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - Semantic Versioning</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - Semantic Versioning</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>We started off this assignment by refering back to a video that Rio made for us about semantic versioning and what it does. Then she had us look up a software or package and what version it was in semantic versioning.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I have seen these semantic versioning before, but i never understood why they changed it from 2 numbers to 3. Now i have a much better idea of what it stands for. The first number is a major version. This is basically a whole new set of code that is not compatible with the last major version. The second version is a minor version, which means that it is just adding a new feature or improving the software a bit. This is backwards compatible with the last minor version. Lastly, the 3rd number is for patches, mainly for bugs. Some reasons that this semantic version is so good, is because it helps to clarify whether peoples code is still compatible with your software, what the software update is about, and it also helps people determine whether they want to download the latest version or not. Its really interesting to get to go in depth a bit more about what this semantic versioning is, so it won't be a big mystery when we start using it for our projects we create.</p>
+                    <img class="img-rounded" src="../../img/images/version.png">
                 </div>
             </div>
         </div>
