--- a/sub-pages/protocols/utf8.htm
+++ b/sub-pages/protocols/utf8.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about what UTF8 is and how it relates to websites.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topic - UTF8</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topic - UTF8</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>During this assignment, we first had to watch a video abou what utf8 is on youtube. Afterwards, we had to do some research about the topic.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I found this video very informational and interesting. I think that it is important to have a universal code for the internet for characters because it covers a world where there are many different languages, and dialects, as well as symbols that represent different things to different peoples. With UTF-8, It helps to unify all the characters used in many used languages and cultures. I wanted to see what the Unicode consortium was, so I looked it up, and it took me to the official website, where it was directed to a page that gave information about the consortium and what it's mission is. I also went on a page that told the summarized history of the consortium. It was interesting to note that it is based in California, and the members are mainly large computer companies, as well as software producers, as well as government ministries, etc. This video succeeded in me getting to understand the basics of UTF-8 and the history behind it.</p>
+                    <img class="img-rounded" src="../../img/images/emoji.jpg">
                 </div>
             </div>
         </div>
