updated file on repo

--- a/sub-pages/tools/editor.htm
+++ b/sub-pages/tools/editor.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about the different types of code editors.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Hands-On - Select your Editor</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Hands-On - Select your Editor</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>In this assignment, we were tasked to pick out a code editor that we liked. The default one we would use in class was VSCode but if there was another that we chose, it was fine.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I chose VSCode since I was introduced to it last semester by Rio in CIT 15. I enjoyed how it was pretty cool to use and since I already had it installed on my computer, I decided to stick with it. Plus, because it is made by windows, its probably going to stick with the latest trends in tech and its also going to have a good support system as all windows products do. So I started to download the back up and sync from google, and that was pretty simple as well. I just had to choose what files that i wanted to back up on my drive. However, because use the email I used to sign up only for school, i chose not to back up any files from my computer. I did have the CIT 82 folder on my drive synced with my computer. I think that is a really smart idea because now i can put any file i need to upload to my drive from my file explorer. Before, i had to put the file on a folder i made on my computer, then go to drive, and then move it over. Now it has gotten much simpler. Also, It installed shortcuts on my desktop to google docs and more so i can get to my files and docs faster. I really should have done this sooner.</p>
+                    <img class="img-rounded" src="../../img/images/editor.png">
                 </div>
             </div>
         </div>
