--- a/sub-pages/tools/git.htm
+++ b/sub-pages/tools/git.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about git, what it is, and how it is necessary to development.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Hands-On - Git for your OS</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Hands-On - Git for your OS</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>Previously, we had watched a class overview video that rio had made for us. It included a tutorial on how to install git into our system and what command lines to put in. I just followed what she showed us. Then we had to post a picture of the command line showing what version of git we had installed.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Installing Git was pretty easy. I wasn't too sure on what to chose during the instillation process, so i just went with the default that it gave me. I'm sure that i did it right though because it worked. I'm not too familiar with the command line terminals but I am willing to learn it since it seems that web developers are going to need it. I also know that in VSCode, you can integrate Git and use it on the app. However i am having trouble doing that so i need to find a video on Lynda.com or somewhere else that can teach me to put Git on the VSCode app. I also need to find a video that will teach me some basic commands to use. Overall, Git seems to be working fine and can't wait to start using it for my projects.</p>
+                    <img class="img-rounded" src="../../img/images/git version.png">
                 </div>
             </div>
         </div>
