--- a/sub-pages/tools/github.htm
+++ b/sub-pages/tools/github.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about github. It shows it's relationship with git, and how I made an account on the service.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Hands-On - Get Started with GitHub and GitHub Pages</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Hands-On - Get Started with GitHub and GitHub Pages</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>For this assignment, we had watched a class video made by Rio and it featured an sort of tutorial on what to do. Then we had to make an account, create a repository, and post a link to it.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I already made a github account for my CIT 15 course, in the previous semester. I also had an already made repository. So i just worked off of that by changing the name of the repo, then i tried to delete the existing files on the repository. I had some problems though, because I didn't really know that you had to commit that you were deleting the files. After i figured that out, i was able to start a new file and copy the template of an HTML file from VSCode, and then put it up on the new file. It was fairly simple to do that, so now i'm all set. The only thing is that when i made the repo, I don't remember if I made it with the git ignore feature. I guess we will find out soon enough. </p>
+                    <img class="img-rounded" src="../../img/images/octocat.jpg">
                 </div>
             </div>
         </div>
