--- a/sub-pages/webdev/framework.htm
+++ b/sub-pages/webdev/framework.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about what a framework is, and the different kinds that are out there.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - Front-End Frameworks</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - Front-End Frameworks</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>This assignment allowed us to research the different frameworks out there on the web and to see what was different on them from the others out there.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Hello all. For this assignment, i decided to research Semantic UI. It specializes in the using code that is easily understood by humans. It does this by using natural language principles. Because of this, it has surpassed most of its other fellow frameworks in semantics and structure. It's current version is 2.3.0 which was released this earlier this month. It has over 3000 theming variables and 50+ UI components. It's open source and is available on Github for large scale production. It's responsive and you can choose how it responds to tablets and mobile devices. One last cool thing is that it is integrated with libraries like React, Meteor, and Ember to name a few. It's supported by major browsers like Safari, Chrome, and Firefox.</p>
+                    <img class="img-rounded" src="../../img/images/bootstrap-logo.png">
                 </div>
             </div>
         </div>
