--- a/sub-pages/tools/chromedevtools.htm
+++ b/sub-pages/tools/chromedevtools.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about what the developer tools on chrome are for, and the features it has.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Hands-On - Chrome DevTools</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Hands-On - Chrome DevTools</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>On this assignment, we were asked to look up videos on youtube on tutorials of how to use google chrome's developer tools and the features it contained.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">So I've known about the developer tools that Google Chrome features for a while. Yet I never really got to understand all the different features it has. So I found a video that goes over the basics of dev tools. I liked the video because it was sweet and to the point, but the narrator of the video wasn't the best. So I looked up another video. This one was much more professional and went in depth about certain things that the first video didn't. However this video was like an hour long so I just watched some of it and skipped around. I do think that it was a very informative video. I really love how google is making it so easy for developers to experiment and test out new things from in the browser. It's such a powerful tool to have. I like how you can even write JavaScript and test it out in the dev tools as well. I can't wait to experiment some more on my own with this tool and learn new things as new improvements come in the future.</p>
+                    <img class="img-rounded" src="../../img/images/dev tools.png">
                 </div>
             </div>
         </div>
