--- a/sub-pages/webdev/webtech.htm
+++ b/sub-pages/webdev/webtech.htm
@@ -71,7 +71,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Web Development <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="../webdev/htmltraining.htm">Lecture - HTML Essential Training Part 1, 2</a></li>
+                          <li><a href="../webdev/VSCode.htm">Lecture - HTML Essential Training Part 1, 2</a></li>
                           <li><a href="../webdev/webtech.htm">Lecture - Web Technology Fundamentals P1, 2</a></li>
                           <li><a href="../webdev/webdev.htm">Becoming a Web Developer: Full Stack vs Front</a></li>
                           <li><a href="../webdev/framework.htm">Current Topics - Front-End Frameworks</a></li>
